# magic_migrate

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
magic_migrate/: Cargo.toml  README.md
magic_migrate/src/: declarative_macros.rs  lib.rs  mini_how.rs  traits.rs
magic_migrate/src/fixtures/: try_personV1_V2.txt
magic_migrate_derive/: Cargo.toml
magic_migrate_derive/src/: container_attributes.rs  lib.rs
src/: lib.rs
src/fixtures/: personV1_V2.txt  try_personV1_V2.txt
usage/: Cargo.toml
usage/tests/: compilation_tests.rs
usage/tests/fails/: duplicate_attribute.rs  duplicate_attribute.stderr
usage/tests/pass/: one_struct.rs  two_structs.rs  two_structs_implicit_deserializer.rs  two_structs_implicit_error.rs  two_structs_infallible.rs  two_structs_simple.rs
