[package]
name = "magic_migrate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Automagically load and migrate deserialized structs to the latest version"
keywords = ["serde", "version", "upgrade", "migrate", "transfer", "isomorphic"]
repository = "https://github.com/schneems/magic_migrate"
documentation = "https://docs.rs/magic_migrate"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = {version = "1", features = ["derive"]}
toml = "0.8"
