[workspace]
resolver = "2"
members = [
    "usage",
    "magic_migrate",
    "magic_migrate_derive",
]

[workspace.package]
version = "1.1.0"
rust-version = "1.82"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/schneems/magic_migrate"
documentation = "https://docs.rs/magic_migrate"

[workspace.dependencies]
pretty_assertions = "1.4.1"
serde = {version = "1.0", features = ["derive"] }
toml = "0.8"
