[package]
name = "magic_migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Automagically load and migrate deserialized structs to the latest version"
keywords = ["serde", "version", "upgrade", "migrate", "isomorphic"]
repository.workspace = true
documentation.workspace = true
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = {version = "1", features = ["derive"]}
thiserror = { version = "2.0.8" }
toml = "0.8"
