[package]
name = "magic_migrate"
description = "Automagically load and migrate deserialized structs to the latest version"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["serde", "version", "upgrade", "migrate", "isomorphic"]
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
serde = "1"
magic_migrate_derive = { version = "1", optional = true, path = "../magic_migrate_derive" }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = {version = "1", features = ["derive"]}
thiserror = { version = "2.0.8" }
toml = "0.8"

[features]
derive = ["dep:magic_migrate_derive"]
default = ["derive"]
