[package]
name = "magic_migrate_derive"
version.workspace = true
edition = "2021"

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
strum = {version = "0.26", features = ["derive"] }

[lib]
proc-macro = true

[dev-dependencies]
pretty_assertions.workspace = true
