[package]
name = "magic_migrate_derive"
description = "Derive macros for magic_migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
proc-macro2 = "1.0"
strum = {version = "0.26", features = ["derive"] }

[lib]
proc-macro = true

[dev-dependencies]
pretty_assertions.workspace = true
